message FunctionCall {
    required string requestId = 1;
    required string requestJsonDate = 2;
    required string functionName = 3;
    required string arguments = 4;
}